--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
             <a href="#" class="pageHeader__logo logo">logo</a>
             <ul class="pageHeader__navList">
                 <li class="pageHeader__navItem">
-                    <a class="padeHeader__link" href="#">works</a>
+                    <a class="pageHeader__link" href="#">works</a>
                 </li>
                 <li class="pageHeader__navItem">
-                    <a class="padeHeader__link" href="#">about</a>
+                    <a class="pageHeader__link" href="#">about</a>
                 </li>
                 <li class="pageHeader__navItem">
-                    <a class="padeHeader__link" href="#">services</a>
+                    <a class="pageHeader__link" href="#">services</a>
                 </li>
                 <li class="pageHeader__navItem">
-                    <a class="padeHeader__link" href="#">blog</a>
+                    <a class="pageHeader__link" href="#">blog</a>
                 </li>
                 <li class="pageHeader__navItem">
-                    <a class="padeHeader__link" href="#">contact</a>
+                    <a class="pageHeader__link" href="#">contact</a>
                 </li>
             </ul>
         </nav>
