--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@100;200&family=Open+Sans:wght@300;400;500;600;700;800&family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Freebie-Agency</title>
@@ -37,18 +40,198 @@
             <img src="img/top-slider.png" alt="slider image" class="topSlider__image">
             <img src="img/top-slider.png" alt="slider image" class="topSlider__image">
         </div>
-        <div class="topSlider__text">
-            <h1>WHERE GREAT IDEAS COME TO LIFE</h1>
+        <div class="topSlider__text container">
+            <h1 class="topSlider__title">WHERE GREAT IDEAS COME TO LIFE</h1>
             <p>Passionate creative studio helping startups grow their business!</p>
         </div>
-        <div class="topSlider__controls">
-            <button>01</button>
-            <button>02</button>
-            <button>03</button>
+        <div class="topSlider__controls container">
+            <button class="topSlider__controlsButton topSlider__controlsButton_active" id="slide1">01</button>
+            <button class="topSlider__controlsButton" id="slide2">02</button>
+            <button class="topSlider__controlsButton" id="slide3">03</button>
         </div>
     </section>
-    <section class="aboutUs"></section>
-    <section class=""></section>
+    <article class="aboutUs container">
+        <h2 class="aboutUs__title"><b>we are</b>THE SQWD</h2>
+        <p class="aboutUs__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+        <p class="aboutUs__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+        <div class="aboutUs__background">
+            <img class="aboutUs__image" src="img/aboutus1.png" alt="about us image1">
+            <div class="aboutUs__greenBox"></div>
+            <img class="aboutUs__image" src="img/aboutus2.png" alt="about us image2">
+        </div>
+    </article>
+    <section class="services">
+        <div class="container">
+        <h2 class="services__title sectionTitle">Our Services</h2>
+        <div class="services__list">
+            <a class="services__link" href="#">
+                <article class="services__item">
+                    <h3 class="services__itemTitle">Branding</h3>
+                    <div class="services__itemImageWrapper">
+                        <svg class="services__itemImage" version="1.1" id="IDEA" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1800 1800" enable-background="new 0 0 1800 1800" xml:space="preserve">
+                        <g>
+                            <path d="M900.114,54.882c-329.509,0-597.583,268.077-597.583,597.59c0,219.592,118.159,418.518,309.714,523.794
+                                v152.835h-0.127v122.121h-0.172v185.238h172.682c3.58,60.518,53.924,108.656,115.315,108.656
+                                c61.39,0,111.736-48.139,115.31-108.656h172.571v-122.122h0.177v-185.237h-0.019v-152.835
+                                c191.557-105.276,309.715-304.203,309.715-523.794C1497.697,322.959,1229.623,54.882,900.114,54.882z M675.235,1392.218h449.649
+                                v59.005H675.235V1392.218z M899.943,1682.002c-29.441,0-48.627-22.507-51.876-45.541h103.788
+                                C948.464,1662.119,926.504,1682.002,899.943,1682.002z M1124.708,1573.344H675.063v-59.005h449.645V1573.344z M1142.116,1129.132
+                                l-17.25,8.778v189.457H931.559V861l187.201-187.21c12.323-12.323,12.323-32.302-0.005-44.63
+                                c-12.318-12.318-32.302-12.323-44.629,0.004L900,803.299L725.875,629.165c-12.323-12.323-32.307-12.328-44.63-0.004
+                                c-12.328,12.328-12.328,32.307-0.005,44.63L868.441,861v466.367H675.362V1137.91l-17.249-8.778
+                                c-180.4-91.778-292.465-274.427-292.465-476.66c0-294.71,239.761-534.471,534.466-534.471
+                                c294.706,0,534.466,239.761,534.466,534.471C1434.58,854.705,1322.516,1037.354,1142.116,1129.132z"/>
+                            <path d="M1066.667,246.225c-17.43,0-31.558,14.128-31.558,31.559s14.128,31.558,31.558,31.558
+                                c49.641,0,165.99,59.634,165.99,175.279c0,17.431,14.128,31.559,31.558,31.559c17.431,0,31.559-14.128,31.559-31.559
+                                C1295.773,328.101,1146.624,246.225,1066.667,246.225z"/>
+                            <path d="M209.331,712.881c0-17.43-14.128-31.558-31.558-31.558H34.686c-17.43,0-31.558,14.128-31.558,31.558
+                                s14.128,31.558,31.558,31.558h143.087C195.203,744.439,209.331,730.312,209.331,712.881z"/>
+                            <path d="M220.157,300.096c6.164,6.163,14.239,9.245,22.317,9.245c8.075,0,16.153-3.082,22.313-9.241
+                                c12.328-12.328,12.328-32.307,0.004-44.629L163.623,154.297c-12.318-12.319-32.303-12.323-44.63-0.004
+                                c-12.327,12.327-12.327,32.307-0.004,44.63L220.157,300.096z"/>
+                            <path d="M220.17,1125.662l-101.178,101.174c-12.327,12.327-12.327,32.307-0.004,44.634
+                                c6.164,6.164,14.238,9.246,22.317,9.246c8.074,0,16.153-3.082,22.312-9.246l101.179-101.173
+                                c12.327-12.327,12.327-32.307,0.004-44.625C252.478,1113.344,232.493,1113.344,220.17,1125.662z"/>
+                            <path d="M1765.314,681.323h-143.083c-17.43,0-31.559,14.128-31.559,31.558s14.129,31.558,31.559,31.558h143.083
+                                c17.43,0,31.558-14.128,31.558-31.558S1782.744,681.323,1765.314,681.323z"/>
+                            <path d="M1557.521,309.341c8.074,0,16.153-3.082,22.316-9.241l101.174-101.173
+                                c12.322-12.327,12.322-32.307,0-44.634c-12.328-12.319-32.307-12.319-44.635,0l-101.173,101.173
+                                c-12.323,12.328-12.323,32.307,0,44.634C1541.368,306.259,1549.447,309.341,1557.521,309.341z"/>
+                            <path d="M1579.829,1125.662c-12.318-12.318-32.302-12.318-44.63,0.01c-12.323,12.318-12.323,32.298,0.005,44.625
+                                l101.178,101.173c6.159,6.164,14.238,9.246,22.312,9.246c8.075,0,16.154-3.082,22.318-9.246
+                                c12.322-12.327,12.322-32.307-0.005-44.634L1579.829,1125.662z"/>
+                        </g></svg>
+                    </div>
+                    <p class="services__itemText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p class="services__itemMore">read more</p>
+                </article>
+            </a>
+            <a class="services__link" href="#">
+                <article class="services__item">
+                    <h3 class="services__itemTitle">DESIGN</h3>
+                    <div class="services__itemImageWrapper">
+                        <svg version="1.1" class="services__itemImage" id="DESIGN" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1800 1800" enable-background="new 0 0 1800 1800" xml:space="preserve">
+                            <g id="Layer">
+                                <g>
+                                    <path d="M1541.606,1540.146l0.009-0.008c35.598-35.594,35.598-93.52,0-129.121
+                                        c-17.24-17.236-40.178-26.745-64.569-26.745c-24.378,0-47.314,9.509-64.564,26.763c-35.588,35.584-35.588,93.51,0.009,129.104
+                                        C1448.096,1575.73,1506.014,1575.73,1541.606,1540.146z M1440.885,1511.743c-9.656-9.655-14.975-22.498-14.975-36.165
+                                        c0-13.659,5.318-26.511,14.975-36.167c9.665-9.655,22.512-14.979,36.175-14.979c13.659,0,26.497,5.323,36.161,14.979
+                                        c19.938,19.945,19.938,52.387-0.008,72.332C1493.271,1531.689,1460.831,1531.681,1440.885,1511.743z"/>
+                                    <path d="M1700.934,402.736c0.021-0.026,0.047-0.043,0.068-0.065c0.044-0.043,0.083-0.091,0.127-0.134l5.504-5.505
+                                        l-0.138-0.139c81.836-87.814,80.038-225.814-5.507-311.356c-42.353-42.357-98.664-65.685-158.565-65.685
+                                        c-57.228,0-111.154,21.339-152.792,60.18l-0.134-0.134l-5.511,5.507c-0.043,0.046-0.09,0.085-0.134,0.131
+                                        c-0.021,0.021-0.039,0.045-0.061,0.069L66.371,1403.02l0.513,0.513c-7.364,4.749-12.699,12.548-13.98,21.907L9.578,1741.903
+                                        c-1.319,9.647,1.95,19.347,8.831,26.232c5.875,5.87,13.807,9.108,22.004,9.108c1.402,0,2.813-0.095,4.224-0.286l316.451-43.338
+                                        c9.365-1.276,17.163-6.617,21.912-13.98l0.512,0.513L1700.934,402.736z M1542.423,82.094c43.272,0,83.954,16.852,114.551,47.452
+                                        c55.643,55.638,62.276,142.02,19.897,204.983L1451.973,109.64C1478.482,91.724,1509.717,82.094,1542.423,82.094z
+                                        M1389.497,167.919l229.113,229.112L383.512,1632.129l-86.195-86.19l991.423-991.409l-59.351-59.342l-991.41,991.418
+                                        l-83.585-83.586L1389.497,167.919z M76.804,1709.731l35.68-260.604l224.915,224.916L76.804,1709.731z"/>
+                                    <path d="M506.941,804.479l56.789-56.789l-454.446-454.45l185.432-185.437l87.924,87.932l-63.792,63.783
+                                        l50.362,50.359l63.792-63.779l51.262,51.258l-63.792,63.788l50.363,50.354l63.797-63.779l51.257,51.267l-94.375,94.353
+                                        l50.376,50.363l94.362-94.362l62.502,62.498l-63.792,63.801l50.363,50.354l63.792-63.792l0.043,0.047l56.789-56.789
+                                        L323.106,22.622c-15.682-15.686-41.102-15.686-56.784,0L24.102,264.845c-15.687,15.683-15.687,41.107,0,56.789L506.941,804.479z"
+                                        />
+                                    <path d="M1778.944,1478.287c-0.726-0.729-1.478-1.424-2.241-2.085l-505.282-505.273l-151.159,151.159l50.259,50.26
+                                        l94.371-94.37l428.79,428.782l-185.441,185.432l-479.045-479.041l-56.789,56.798l507.437,507.427
+                                        c15.682,15.69,41.102,15.69,56.788,0l242.234-242.213c0.021-0.034,0.048-0.052,0.079-0.086
+                                        C1794.63,1519.402,1794.63,1493.969,1778.944,1478.287z"/>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                    <p class="services__itemText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p class="services__itemMore">read more</p>
+                </article>
+            </a>
+            <a class="services__link" href="#"> 
+                <article class="services__item">
+                    <h3 class="services__itemTitle">DEVELOPMENT</h3>
+                    <div class="services__itemImageWrapper">
+                        <svg class="services__itemImage" viewBox="0 0 22.105 22.105" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 2" id="Layer_2"><g data-name="Layer 1" id="Layer_1-2"><path d="M20.877,3.126H19.2V.335A.335.335,0,0,0,18.867,0H3.238A.335.335,0,0,0,2.9.335V3.126H1.228A1.23,1.23,0,0,0,0,4.354V18.2a1.23,1.23,0,0,0,1.228,1.228H6.7v2.01H4.354a.335.335,0,1,0,0,.669h13.4a.335.335,0,0,0,0-.669H15.406v-2.01h5.471A1.23,1.23,0,0,0,22.105,18.2V4.354A1.23,1.23,0,0,0,20.877,3.126Zm0,.67a.558.558,0,0,1,.558.558V16.077H19.2V3.8ZM3.572.67h14.96V16.077H3.572ZM.67,4.354A.558.558,0,0,1,1.228,3.8H2.9V16.077H.67ZM14.737,21.436H7.368v-2.01h7.369Zm6.7-3.238a.558.558,0,0,1-.558.558H1.228A.558.558,0,0,1,.67,18.2V16.747H21.435ZM16.62,3.8H5.484a.335.335,0,0,1,0-.67H16.62A.335.335,0,0,1,16.62,3.8ZM13.283,1.658a.339.339,0,0,1-.236.576C12.419,2.174,12.791,1.271,13.283,1.658Zm1.55-.094a.335.335,0,0,1,0,.67A.335.335,0,0,1,14.833,1.564Zm2.023.094a.34.34,0,0,1-.237.576C15.991,2.174,16.363,1.271,16.856,1.658ZM12.7,7.013l-2.68,6.252A.335.335,0,1,1,9.4,13l2.679-6.252a.335.335,0,0,1,.616.264ZM8.468,8.247l-1.956,1.76,1.956,1.761a.335.335,0,0,1-.448.5l-2.233-2.01a.335.335,0,0,1,0-.5L8.02,7.748a.335.335,0,0,1,.448.5Zm7.849,1.511a.336.336,0,0,1,0,.5l-2.233,2.009a.335.335,0,0,1-.448-.5l1.957-1.761-1.957-1.76a.335.335,0,0,1,.448-.5Z" data-name="custom coding" id="custom_coding"/></g></g></svg>
+                    </div>
+                    <p class="services__itemText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p class="services__itemMore">read more</p>
+                </article>
+            </a>
+        </div>
+        </div>
+    </section>
+    <section class="works container">
+        <header class="works__header">
+            <h2 class="works__title sectionTitle">Latest Works</h2>
+            <nav class="works__nav">
+                <ul class="works__navList">
+                    <li class="works__navItem"><button class="works__navButton works__navButton_active">all</button></li>
+                    <li class="works__navItem"><button class="works__navButton">web design</button></li>
+                    <li class="works__navItem"><button class="works__navButton">Branding</button></li>
+                    <li class="works__navItem"><button class="works__navButton">PHOTOGRAPHY</button></li>
+                    <li class="works__navItem"><button class="works__navButton">ILLUSTRATION</button></li>
+                </ul>
+            </nav>
+        </header>
+        <a class="works__item" href="#">
+            <h3 class="works__itemTitle">100&nbsp;years<br>PHOTOGRAPHY</h3>
+            <img class="works__itemImage" src="img/work1.png" alt="work photo">
+            <p class="works__itemType">Photography</p>
+            <p class="works__itemDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="works__itemMore">read more</p>
+        </a>
+        <a class="works__item" href="#">
+            <h3 class="works__itemTitle">a&nbsp;kitten&rsquo;s<br>life </h3>
+            <img class="works__itemImage" src="img/work2.png" alt="work photo">
+            <p class="works__itemType">Photography</p>
+            <p class="works__itemDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="works__itemMore">read more</p>
+        </a>
+        <a class="works__item" href="#">
+            <h3 class="works__itemTitle">GROOVEMADE<br>PRODUCTS FOR MAC</h3>
+            <img class="works__itemImage" src="img/work3.png" alt="work photo">
+            <p class="works__itemType">Photography</p>
+            <p class="works__itemDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="works__itemMore">read more</p>
+        </a>
+        <a class="works__item" href="#">
+            <h3 class="works__itemTitle">apple&rsquo;s<br>lost magic</h3>
+            <img class="works__itemImage" src="img/work4.png" alt="work photo">
+            <p class="works__itemType">Photography</p>
+            <p class="works__itemDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="works__itemMore">read more</p>
+        </a>
+        <a class="works__more" href="">view more</a>
+    </section>
+    <section class="team">
+        <div class="container">
+            <h2 class="team__title sectionTitle">The Team</h2>
+            <div class="team__list">
+                <figure class="team__person">
+                    <img class="team__personImage" src="img/person1.png" alt="person photo">
+                    <div class="team__personText">
+                        <figcaption class="team__personName">TOM JONES</figcaption>
+                        <p class="team__personPosition">Creative Director</p>
+                        <p class="team__personMotto">Create with simplicity in&nbsp;mind!</p>
+                    </div>
+                </figure>
+                <figure class="team__person">
+                    <img class="team__personImage" src="img/person2.png" alt="person photo">
+                    <div class="team__personText">
+                        <figcaption class="team__personName">MICHAEL FRAUP</figcaption>
+                        <p class="team__personPosition">Creative Director</p>
+                        <p class="team__personMotto">Create with simplicity in&nbsp;mind!</p>
+                    </div>
+                </figure>
+                <figure class="team__person">
+                    <img class="team__personImage" src="img/person3.png" alt="person photo">
+                    <div class="team__personText">
+                        <figcaption class="team__personName">TIM CAHILL</figcaption>
+                        <p class="team__personPosition">Creative Director</p>
+                        <p class="team__personMotto">Create with simplicity in&nbsp;mind!</p>
+                    </div>
+                </figure>
+            </div>
+        </div>
+    </section>
+    <section class="reviews"></section>
     <footer class="pageFooter"></footer>
 </body>
 </html>
