--- a/index.html
+++ b/index.html
@@ -231,7 +231,111 @@
             </div>
         </div>
     </section>
-    <section class="reviews"></section>
-    <footer class="pageFooter"></footer>
+    <section class="reviews container">
+        <div class="reviews__slider">
+            <blockquote class="reviews__quote">
+                <q class="reviews__quoteText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do&nbsp;eiusmod tempor incididunt ut&nbsp;labore et&nbsp;dolore magna aliqua. Ut&nbsp;enim ad&nbsp;minim veniam, quis nostrud exercitation ullamco laboris nisi ut&nbsp;aliquip ex&nbsp;ea&nbsp;commodo consequat.</q>
+                <svg class="reviews__quoteIcon" version="1.1" id="Layer_1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24"
+                    enable-background="new 0 0 24 24" xml:space="preserve">
+                    <g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M6,13c-2.8,0-5-2.2-5-5s2.2-5,5-5s5,2.2,5,5S8.8,13,6,13z M6,5C4.3,5,3,6.3,3,8s1.3,3,3,3s3-1.3,3-3S7.7,5,6,5z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M3,21c-0.6,0-1-0.4-1-1s0.4-1,1-1C8.9,19,9,8.1,9,8c0-0.6,0.4-1,1-1s1,0.4,1,1C11,8.5,10.9,21,3,21z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M18,13c-2.8,0-5-2.2-5-5s2.2-5,5-5s5,2.2,5,5S20.8,13,18,13z M18,5c-1.7,0-3,1.3-3,3s1.3,3,3,3s3-1.3,3-3S19.7,5,18,5z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M15,21c-0.6,0-1-0.4-1-1s0.4-1,1-1c5.9,0,6-10.9,6-11c0-0.6,0.4-1,1-1s1,0.4,1,1C23,8.5,22.9,21,15,21z" />
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+                <p>
+                    <span class="reviews__quoteAuthor">DAVID&nbsp;JAMES&nbsp;</span>
+                    <span class="reviews__quoteService">/ Web Design</span>
+                </p>
+                <div class="reviews__quoteStars">
+                    <svg class="reviews__slideStar" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 53" id="Layer_53"><path d="M8,31a2,2,0,0,1-1.17-.38A2.13,2.13,0,0,1,6,28.69l.73-8.19L1.5,14.34a2.14,2.14,0,0,1-.39-2.06A2.06,2.06,0,0,1,2.6,10.9l7.62-1.8,4-7a2.05,2.05,0,0,1,3.58,0l4,7.05,7.62,1.8a2.06,2.06,0,0,1,1.49,1.38,2.14,2.14,0,0,1-.39,2.06L25.32,20.5l.73,8.19a2.13,2.13,0,0,1-.88,1.93,2,2,0,0,1-2,.2L16,27.58,8.84,30.82A2,2,0,0,1,8,31ZM16.05,3l-4.3,7.43a1,1,0,0,1-.64.48l-8,1.89c-.06.1-.07.16,0,.21l5.45,6.49a1,1,0,0,1,.23.73l-.77,8.6C7.93,29,8,29,8,29l7.58-3.42a1,1,0,0,1,.82,0L24,29s.09,0,.08-.13l-.77-8.6a1,1,0,0,1,.23-.73L29,13.05a.15.15,0,0,0,0-.14l-8.1-2a1,1,0,0,1-.64-.48ZM10.88,10h0Z"/></g></svg>
+                    <svg class="reviews__slideStar" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 53" id="Layer_53"><path d="M8,31a2,2,0,0,1-1.17-.38A2.13,2.13,0,0,1,6,28.69l.73-8.19L1.5,14.34a2.14,2.14,0,0,1-.39-2.06A2.06,2.06,0,0,1,2.6,10.9l7.62-1.8,4-7a2.05,2.05,0,0,1,3.58,0l4,7.05,7.62,1.8a2.06,2.06,0,0,1,1.49,1.38,2.14,2.14,0,0,1-.39,2.06L25.32,20.5l.73,8.19a2.13,2.13,0,0,1-.88,1.93,2,2,0,0,1-2,.2L16,27.58,8.84,30.82A2,2,0,0,1,8,31ZM16.05,3l-4.3,7.43a1,1,0,0,1-.64.48l-8,1.89c-.06.1-.07.16,0,.21l5.45,6.49a1,1,0,0,1,.23.73l-.77,8.6C7.93,29,8,29,8,29l7.58-3.42a1,1,0,0,1,.82,0L24,29s.09,0,.08-.13l-.77-8.6a1,1,0,0,1,.23-.73L29,13.05a.15.15,0,0,0,0-.14l-8.1-2a1,1,0,0,1-.64-.48ZM10.88,10h0Z"/></g></svg>
+                    <svg class="reviews__slideStar" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 53" id="Layer_53"><path d="M8,31a2,2,0,0,1-1.17-.38A2.13,2.13,0,0,1,6,28.69l.73-8.19L1.5,14.34a2.14,2.14,0,0,1-.39-2.06A2.06,2.06,0,0,1,2.6,10.9l7.62-1.8,4-7a2.05,2.05,0,0,1,3.58,0l4,7.05,7.62,1.8a2.06,2.06,0,0,1,1.49,1.38,2.14,2.14,0,0,1-.39,2.06L25.32,20.5l.73,8.19a2.13,2.13,0,0,1-.88,1.93,2,2,0,0,1-2,.2L16,27.58,8.84,30.82A2,2,0,0,1,8,31ZM16.05,3l-4.3,7.43a1,1,0,0,1-.64.48l-8,1.89c-.06.1-.07.16,0,.21l5.45,6.49a1,1,0,0,1,.23.73l-.77,8.6C7.93,29,8,29,8,29l7.58-3.42a1,1,0,0,1,.82,0L24,29s.09,0,.08-.13l-.77-8.6a1,1,0,0,1,.23-.73L29,13.05a.15.15,0,0,0,0-.14l-8.1-2a1,1,0,0,1-.64-.48ZM10.88,10h0Z"/></g></svg>
+                    <svg class="reviews__slideStar" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 53" id="Layer_53"><path d="M8,31a2,2,0,0,1-1.17-.38A2.13,2.13,0,0,1,6,28.69l.73-8.19L1.5,14.34a2.14,2.14,0,0,1-.39-2.06A2.06,2.06,0,0,1,2.6,10.9l7.62-1.8,4-7a2.05,2.05,0,0,1,3.58,0l4,7.05,7.62,1.8a2.06,2.06,0,0,1,1.49,1.38,2.14,2.14,0,0,1-.39,2.06L25.32,20.5l.73,8.19a2.13,2.13,0,0,1-.88,1.93,2,2,0,0,1-2,.2L16,27.58,8.84,30.82A2,2,0,0,1,8,31ZM16.05,3l-4.3,7.43a1,1,0,0,1-.64.48l-8,1.89c-.06.1-.07.16,0,.21l5.45,6.49a1,1,0,0,1,.23.73l-.77,8.6C7.93,29,8,29,8,29l7.58-3.42a1,1,0,0,1,.82,0L24,29s.09,0,.08-.13l-.77-8.6a1,1,0,0,1,.23-.73L29,13.05a.15.15,0,0,0,0-.14l-8.1-2a1,1,0,0,1-.64-.48ZM10.88,10h0Z"/></g></svg>
+                    <svg class="reviews__slideStar reviews__slideStar_disabled" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 53" id="Layer_53"><path d="M8,31a2,2,0,0,1-1.17-.38A2.13,2.13,0,0,1,6,28.69l.73-8.19L1.5,14.34a2.14,2.14,0,0,1-.39-2.06A2.06,2.06,0,0,1,2.6,10.9l7.62-1.8,4-7a2.05,2.05,0,0,1,3.58,0l4,7.05,7.62,1.8a2.06,2.06,0,0,1,1.49,1.38,2.14,2.14,0,0,1-.39,2.06L25.32,20.5l.73,8.19a2.13,2.13,0,0,1-.88,1.93,2,2,0,0,1-2,.2L16,27.58,8.84,30.82A2,2,0,0,1,8,31ZM16.05,3l-4.3,7.43a1,1,0,0,1-.64.48l-8,1.89c-.06.1-.07.16,0,.21l5.45,6.49a1,1,0,0,1,.23.73l-.77,8.6C7.93,29,8,29,8,29l7.58-3.42a1,1,0,0,1,.82,0L24,29s.09,0,.08-.13l-.77-8.6a1,1,0,0,1,.23-.73L29,13.05a.15.15,0,0,0,0-.14l-8.1-2a1,1,0,0,1-.64-.48ZM10.88,10h0Z"/></g></svg>
+                </div>
+            </blockquote>
+        </div>
+        <div class="reviews__controls">
+            <button class="reviews__button"><svg class="reviews__buttonIcon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 2" id="Layer_2"><path d="M19,26a1,1,0,0,1-.71-.29,1,1,0,0,1,0-1.42L26.59,16l-8.3-8.29a1,1,0,0,1,1.42-1.42l9,9a1,1,0,0,1,0,1.42l-9,9A1,1,0,0,1,19,26Z"/><path d="M28,17H4a1,1,0,0,1,0-2H28a1,1,0,0,1,0,2Z"/></g><g id="frame"><rect height="32" width="32"/></g></svg></button>
+            <button class="reviews__button"><svg class="reviews__buttonIcon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 2" id="Layer_2"><path d="M19,26a1,1,0,0,1-.71-.29,1,1,0,0,1,0-1.42L26.59,16l-8.3-8.29a1,1,0,0,1,1.42-1.42l9,9a1,1,0,0,1,0,1.42l-9,9A1,1,0,0,1,19,26Z"/><path d="M28,17H4a1,1,0,0,1,0-2H28a1,1,0,0,1,0,2Z"/></g><g id="frame"><rect height="32" width="32"/></g></svg></button>
+        </div>
+        <hr class="reviews__line">
+    </section>
+    <footer class="pageFooter">
+        <section class="contacts">
+            <div class="contacts__forms">
+                <div class="contacts__formButton">
+                    <svg class="contacts__formIcon" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M19 7H5C4.44772 7 4 7.44772 4 8V17C4 17.5523 4.44772 18 5 18H19C19.5523 18 20 17.5523 20 17V8C20 7.44772 19.5523 7 19 7ZM5 6C3.89543 6 3 6.89543 3 8V17C3 18.1046 3.89543 19 5 19H19C20.1046 19 21 18.1046 21 17V8C21 6.89543 20.1046 6 19 6H5Z" fill="black" fill-rule="evenodd"/>
+                        <path d="M19 7H5C4.44772 7 4 7.44772 4 8V9.43111C4 9.92721 4.35736 10.3303 4.82549 10.3928C6.7272 10.6462 9.78749 11 12 11C14.2125 11 17.2728 10.6462 19.1745 10.3928C19.6426 10.3303 20 9.92721 20 9.43111V8C20 7.44772 19.5523 7 19 7ZM5 6C3.89543 6 3 6.89543 3 8V9.43111C3 10.4165 3.71664 11.2538 4.69336 11.384C6.59523 11.6375 9.71431 12 12 12C14.2857 12 17.4048 11.6375 19.3066 11.384C20.2834 11.2538 21 10.4165 21 9.43111V8C21 6.89543 20.1046 6 19 6H5Z" fill="black" fill-rule="evenodd"/>
+                        <path d="M10 4.5C9.17157 4.5 8.5 5.17157 8.5 6H7.5C7.5 4.61929 8.61929 3.5 10 3.5H14C15.3807 3.5 16.5 4.61929 16.5 6H15.5C15.5 5.17157 14.8284 4.5 14 4.5H10Z" fill="black" fill-rule="evenodd"/>
+                    </svg>
+                    <h4 class="contacts__formTitle"></h4>
+                    <p class="contacts__formText"></p>
+                </div>
+                <div class="contacts__formButton">
+                    <svg class="contacts__formIcon" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg"><path d="M116.73,31.83a3,3,0,0,0-4.2-.61L64.14,67.34a1,1,0,0,1-1.2,0L15.5,31.06a3,3,0,1,0-3.64,4.77L49.16,64.36,12.27,92.16A3,3,0,1,0,15.88,97L54.11,68.14l5.18,4a7,7,0,0,0,8.43.06l5.44-4.06L111.84,97a3,3,0,1,0,3.59-4.81L78.17,64.35,116.12,36A3,3,0,0,0,116.73,31.83Z"/><path d="M113,19H15A15,15,0,0,0,0,34V94a15,15,0,0,0,15,15h98a15,15,0,0,0,15-15V34A15,15,0,0,0,113,19Zm9,75a9,9,0,0,1-9,9H15a9,9,0,0,1-9-9V34a9,9,0,0,1,9-9h98a9,9,0,0,1,9,9Z"/></svg>
+                    <h4 class="contacts__formTitle"></h4>
+                    <p class="contacts__formText"></p>
+                </div>
+            </div>
+            <div class="contacts__info">
+                <div class="container">
+                    <p class="contacts__text">3rd Floor, Santa Monica Beach, CA, San Francisco</p>
+                    <p class="contacts__text">(359) 0&nbsp;123&nbsp;456&nbsp;789&nbsp;&mdash; info@yourmail.com</p>
+                    <div class="contacts__socialMedia">
+                        <a class="contacts__link" href="#">
+                            <svg class="contacts__linkIcon" enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g>
+                                    <path d="M258.8,507.2C120.4,507.8,6.6,392.6,9.9,251.9C13,117.9,124,7.2,262,8.7C398.7,10.2,511.8,124,508.1,264.9   C504.6,398.3,394.5,507.9,258.8,507.2z M40.2,258.3C41.3,383.6,142.9,480.1,262.9,478c116.2-2.1,214.7-96.8,214.7-220   c0-125.3-102.4-222.2-222.8-219.9C138.6,40.2,41,135.2,40.2,258.3z"/>
+                                    <path d="M206.8,433.4c0-58.9,0-117.3,0-176.3c-13,0-25.6,0-38.5,0c0-20,0-39.4,0-59.4c1.7-0.1,3.4-0.3,5.2-0.3   c9.3,0,18.7-0.2,28,0.1c4.1,0.1,5.5-1,5.4-5.2c-0.2-15.2-0.2-30.3-0.1-45.5c0.1-17.1,4.9-32.6,17.1-45c11.8-12,26.9-18.5,43.3-19.5   c26.4-1.5,52.9-1.3,79.4-1.8c0.3,0,0.6,0.3,1.2,0.6c0,20.1,0,40.3,0,61c-1.9,0.1-3.7,0.2-5.4,0.2c-12,0-24,0-36,0   c-12.1,0.1-19.2,7.3-19.2,19.2c0,11.3,0,22.7,0.1,34c0,0.3,0.2,0.6,0.5,1.7c19.8,0,39.8,0,60.8,0c-2.6,20.3-5,39.7-7.6,59.8   c-18.1,0-35.8,0-54,0c0,59.2,0,117.8,0,176.6C260.1,433.4,233.9,433.4,206.8,433.4z"/>
+                                </g>
+                            </svg>
+                        </a>
+                        <a class="contacts__link" href="#">
+                            <svg class="contacts__linkIcon" enable-background="new 0 0 144.083 144" id="Twitter" version="1.1" viewBox="0 0 144.083 144" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <path d="M72.041,11.166c-33.543,0-60.833,27.29-60.833,60.834c0,33.545,27.29,60.834,60.833,60.834  c33.544,0,60.835-27.289,60.835-60.834C132.875,38.456,105.584,11.166,72.041,11.166z M72.041,126.834  c-30.235,0-54.833-24.598-54.833-54.834c0-30.235,24.598-54.834,54.833-54.834c30.235,0,54.835,24.599,54.835,54.834  C126.875,102.236,102.276,126.834,72.041,126.834z"/>
+                                <path d="M99.208,52.18c1.398-0.722,4.746-2.867,6.324-7.471c0,0-3.803,2.75-8.979,3.074l-0.094,0.052  c-2.648-2.89-6.455-4.703-10.688-4.703c-8.008,0-14.499,6.492-14.499,14.5c0,1.215,0.151,2.395,0.434,3.523l-0.07-0.105  c0,0-15.53,0.89-30.171-15.127c0,0-6.473,11.001,4.61,19.414c-2.427,0.404-6.713-1.78-6.713-1.78s0.242,11.566,11.728,14.398  c-1.86,0.486-5.339,0.646-6.471,0.162c0,0,1.698,8.816,13.428,10.354c-2.993,1.699-8.574,6.875-21.194,5.904  c0,0,9.062,7.441,25.887,6.391s29.04-12.377,33.974-24.348c4.934-11.971,3.561-18.787,3.561-18.787s4.123-2.164,6.957-7.34  c-1.309,0.392-6.164,1.578-7.971,2.017C99.243,52.266,99.225,52.223,99.208,52.18z"/>
+                            </svg>
+                        </a>
+                        <a class="contacts__link" href="#">
+                            <svg class="contacts__linkIcon" enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g>
+                                    <path d="M258.9,507.2C120.4,507.8,6.6,392.6,9.9,252C12.9,118,124,7,262.4,8.7c136.5,1.7,249.4,115.4,245.7,256.1   C504.7,398.2,394.6,507.8,258.9,507.2z M477.8,258c-1-125.2-102.2-221.4-221.5-220C139.7,39.4,40.2,134.4,40.4,258.3   C40.6,383.5,142.6,479.6,261.9,478C378.3,476.5,476.8,381.7,477.8,258z"/>
+                                    <path d="M241.7,321.6c-2.5,10.8-5.4,21.5-7.6,32.3c-5.3,26.7-14.9,51.6-30.1,74.2c-2.6,3.8-5.2,7.7-8,11.4c-0.7,0.9-2.6,2.2-3,1.9   c-1.1-0.7-2.3-2.2-2.3-3.4c-0.9-16.8-2.4-33.5-2.2-50.3c0.3-22.3,7.3-43.5,11.9-65.1c2.9-13.6,5.8-27.3,8.7-40.9   c1.6-7.6,3.7-15.2,4.9-22.9c0.6-3.6,0.6-7.7-0.5-11.1c-6-18.8-6.1-37.3,1.8-55.5c3.9-9.1,9.8-16.8,19.4-20.9   c16.9-7.2,33.6,2.8,35.5,21.3c1.4,13.1-1.8,25.4-5.2,37.8c-3.9,14.6-8.6,29.1-11.1,43.9c-3.8,22.6,15.3,39.3,37.6,34.3   c15.4-3.4,25-13.9,32.6-26.5c9.8-16.5,15.2-34.6,16.8-53.6c0.9-10.9,1.8-21.9,1.5-32.9c-0.5-16.5-5.6-31.7-16.2-44.6   c-10.5-12.7-24.2-20.4-40.2-23.6c-19.5-3.9-38.6-2.7-57.2,5.1c-17.5,7.3-30.9,19.1-40.6,35.1c-12.7,20.9-17.4,43.6-13.9,67.9   c1.3,9.1,4.6,17.7,10.6,24.9c3.5,4.3,4.9,8.7,2.8,14.2c-1.5,4-1.9,8.4-2.9,12.6c-1.6,7.1-5.4,8.6-11.9,5.4   c-19.2-9.6-27.8-26.7-32.9-46.2c-4.2-16.4-4.4-33.1-1.6-49.6c3.6-21.2,12.4-40.5,25.8-57.5c15.4-19.5,34.9-33.2,58.3-41.1   c23.1-7.9,47-9.9,70.9-5.6c30.5,5.5,55.5,20.9,73.7,46.4c17.7,24.9,24.1,52.8,21.3,83c-1.5,15.7-4,31.3-9.2,46.3   c-8.7,25.3-21.9,47.5-45,62.2c-7.7,4.9-16.5,8.4-25.3,11c-7,2.1-14.7,2.6-22.1,2.6c-17.5-0.2-32-7.2-42.6-21.4   c-0.4-0.5-0.5-1.3-0.7-1.9C242.8,321.1,242.2,321.3,241.7,321.6z"/>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="copyright">
+            <p class="copyright__text container">Copyright 2016&nbsp;&mdash; All Rights Reserved&nbsp;&mdash; Designed by&nbsp;JD</p>
+        </div>
+    </footer>
 </body>
 </html>
